--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,7 @@
 @import '../fonts/fonts.css';
 @import 'base/variables';
 @import 'base/mixins';
+@import 'blocks/navigations';
 
 * {
   font-family: 'Montserrat', sans-serif;
