Header and footer

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,8 @@
 @import 'base/variables';
 @import 'base/mixins';
 @import 'blocks/navigations';
+@import 'blocks/headers';
+@import 'blocks/footer';
 
 * {
   font-family: 'Montserrat', sans-serif;
