--- a/src/scss/blocks/_headers.scss
+++ b/src/scss/blocks/_headers.scss
@@ -1,9 +1,16 @@
 .head {
   min-height: 104px;
   width: 100%;
+  display: flex; 
+  align-items: center;
   &__container {
+    height: 80px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    width: 100%;
     align-items: center;
+    &-subButton {
+      margin-top: 10px;
+    }
   }
 }
