--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,13 +1,17 @@
 .footer {
+  padding-top: 20px;
   background-color: $main-color;
   position: fixed;
+  display: flex;
   right: 0;
   bottom: 0;
   text-align: center; 
-  width: 99%;   
+  width: 100%;
+  justify-content: space-around;
   &__items {
-    font-size: 19px;
-    font-weight: bold;
+    margin-top: 5px;
+    font-size: 16px;
+    font-weight: 400;
     color: $second-color;
   }
 }
