--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import 'blocks/navigations';
 @import 'blocks/headers';
 @import 'blocks/footer';
+@import 'blocks/advertise';
 
 * {
   font-family: 'Montserrat', sans-serif;
@@ -21,7 +22,7 @@
 
 .divider {
   margin-top: 4px;
-  width: 60px;
+  width: 100%;
   height: 3px;
   background-color: $main-color;
 }
